--- a/update-app.json
+++ b/update-app.json
@@ -2,6 +2,6 @@
   
 "message":"What's new ?\n• 10 minutes of extra time restored \n• add+time will get 6 hours for one ad \n• Fixed bug and more\n \nThanks for your understand❤️",
    "title":"Can't use continue current version, you need to upgrade v1.0.2. ",
-   "link":"play.google.com/store/apps/details?id=karen.vpn.main",
-   "version": 2
+   "link":"play.google.com/store/apps/details?id=saw.vpnpro.co",
+   "version": 4
 }
